# b2c2-wasm-demo

./: Cargo.toml  README.md
docs/: b2c2_wasm_demo.js  b2c2_wasm_demo_bg.wasm  index.html  index.js  style.css
docs/mode/: b2c2.js  casl2.js
src/: lib.rs
