[package]
name = "b2c2-wasm-demo"
version = "0.1.1"
authors = ["Leonardone <neetsdkasu@gmail.com>"]
edition = "2018"
description = "b2c2のWebデモ" 
readme = "README.md"
license = "MIT"
repository = "https://github.com/neetsdkasu/b2c2-wasm-demo/"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen  = "0.2.63"
b2c2-parser   = { git = "https://github.com/neetsdkasu/b2c2.git", package = "b2c2-parser"  , tag = "v1.0.4" }
b2c2-compiler = { git = "https://github.com/neetsdkasu/b2c2.git", package = "b2c2-compiler", tag = "v1.0.4" }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
